Sun Dec 09 22:46:10 GMT 2012  Olly Betts <olly@survex.com>

	* Backport change from trunk:
	* common/closefrom.cc,configure.ac: On platforms with the F_MAXFD
	  fcntl but without closefrom(), we were failing to close the highest
	  numbered open fd in our closefrom() replacement.  We now also work
	  around valgrind not hiding some extra fds it has open, but then
	  complaining if we try to close them.

Sun Dec 09 22:33:48 GMT 2012  Olly Betts <olly@survex.com>

	* Backport change from trunk:
	* tests/harness/testsuite.cc: When reporting valgrind error, skip any
	  warnings.

Sun Dec 09 22:14:21 GMT 2012  Olly Betts <olly@survex.com>

	* NEWS: Update from ChangeLog.

Thu Nov 22 09:54:46 GMT 2012  Olly Betts <olly@survex.com>

	* Backport changes from trunk:
	* tests/api_anydb.cc: msetweights1 makes multidb1 and multidb2
	  redundant, so remove them.
	* tests/api_backend.cc: Extend msetweights1 to test the case where
	  only even docids match, so in the multi_* case, only docids from
	  one subdatabase match.
	* tests/api_backend.cc: Add testcase msetweights1 which checks we
	  get the weights we expect for a two term query.

Thu Nov 22 09:47:57 GMT 2012  Olly Betts <olly@survex.com>

	* Backport change from trunk:
	* queryparser/termgenerator.cc: TermGenerator internal member can
	  never be NULL, so drop NULL test.

Thu Nov 22 09:42:35 GMT 2012  Olly Betts <olly@survex.com>

	* Backport change from trunk:
	* tests/harness/testsuite.cc: Remove compatibility code for valgrind <
	  3.3.0, since we reject such old versions at configure time.

Thu Nov 22 09:38:33 GMT 2012  Olly Betts <olly@survex.com>

	* Backport change from trunk:
	* tests/api_weight.cc: New testcase checkstatsweight1 which checks a
	  weight subclass gets the correct values for all the stats.

Thu Nov 22 09:33:22 GMT 2012  Olly Betts <olly@survex.com>

	* Backport change from trunk:
	* queryparser/queryparser.lemony: Improve a couple of comments.
